ubiquity (0.99.71) dapper; urgency=low

  * KDE Frontend:
    - Order methods to match gtkui
    - Some fixes to crashdialogue
    - Don't show blank choices in set_disk_choices
    - Delay auto-partitioning until after final step

 -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 27 Apr 2006 19:25:27 +0000

ubiquity (0.99.70) UNRELEASED; urgency=low

  * Ignore errors from locale.setlocale() in timezone component too (closes:
    Malone #41846).
  * Account for preseeding changes in partman-auto 45ubuntu10.
  * Escape passwords when sending them to debconf (closes: Malone #37934).
    Requires debconf (>= 1.4.72) and won't work with cdebconf yet.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 28 Apr 2006 10:22:57 +0100

ubiquity (0.99.69) dapper; urgency=low

  * GTK frontend:
    - Make sure labels don't end up in the focus chain, despite being
      selectable.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 27 Apr 2006 00:19:51 +0100

>>>>>>> MERGE-SOURCE
ubiquity (0.99.68) dapper; urgency=low

  [ Tollef Fog Heen ]
  * Configure French Swiss, German Swiss and Slovenian keyboards correctly
    in X.

  [ Colin Watson ]
  * Ignore comments and blank lines in manifest files, so that we can put
    comments there to help out customisers.
  * GTK frontend:
    - Make label text selectable (closes: Malone #41618).
    - Guard against calling gtk.main_quit() outside of a main loop when
      quitting (closes: Malone #41619).
  * KDE frontend:
    - Fix Unicode decoding crash in autopartitioner (closes: Malone #41621).
      Shuffle around a couple of workarounds elsewhere into better places.
    - Fix "setEnablede" typo in the manual partitioner.
    - Fix various bits of checked vs. enabled confusion in the manual
      partitioner, plus a missing unicode() call that prevented the format
      checkbox from ever being selectable.
  * Automatic update of included source packages: base-installer
    1.42ubuntu11.
